# abk_aia

./: CLAUDE.md  DEPLOYMENT.md  README.md  install.sh  pyproject.toml  run_tests.py
.github/workflows/: pipeline.yml
docs/: build_docs.sh  changelog.rst  conf.py  examples.rst  index.rst
docs/api/: git_aia_manager.rst  models.rst  modules.rst  workflow_coordinator.rst
examples/: usage_example.py
scripts/: setup_repo_workflow.py
src/abk_aia/: __init__.py  abk_common.py  git_aia_manager.py  models.py  workflow_coordinator.py
src/aia/: __init__.py  cli.py  git_aia_manager.py  github_app_setup.py  models.py  notifications.py  setup_scripts.py  validation.py  workflow_coordinator.py
tests/: __init__.py  conftest.py  test_abk_common.py  test_git_aia_manager.py  test_main.py  test_models.py  test_workflow_coordinator.py
